--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             humanoid "Na'vi" in order to mine for the precious material scattered throughout their rich woodland. In exchange for the spinal surgery that will fix his legs, Jake gathers knowledge, of the Indigenous Race and their Culture, for the cooperating
             military unit spearheaded by gung-ho Colonel Quaritch, while simultaneously attempting to infiltrate the Na'vi people with the use of an "avatar" identity. While Jake begins to bond with the native tribe and quickly falls in love with the
             beautiful alien Neytiri, the restless Colonel moves forward with his ruthless extermination tactics, forcing the soldier to take a stand - and fight back in an epic battle for the fate of Pandora. </p>
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
+        <img src="star-solid.svg" width="40px" height="40px">
+            <img src="star-solid.svg" width="40px" height="40px">
+       <img src="star-solid.svg" width="40px" height="40px">
+      <img src="star-solid.svg" width="40px" height="40px">
     </section>
     <hr>
     <section class="main" id="fall">
@@ -40,28 +40,28 @@
         <p>Drowning in a sea of grief 51 painful weeks after the life-altering incident that scarred her for life, emotionally fragile rock climber Becky reluctantly decides to confront her fears, and as her thrill-seeking friend Hunter re-enters Becky's
             ruined life, the two experienced climbers embark on a high-risk climbing adventure to the top of the abandoned 2,000-foot B67 TV tower: an anxiety-inducing, vertigo-inspiring construction of weather-beaten metal and rattling rivets in the
             middle of the Mojave desert. However, when the peril-laden climb doesn't go as planned, the women must summon up every last ounce of courage and strength to devise a plan for a safe return home or die. </p>
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
+            <img src="star-solid.svg" width="40px" height="40px">
+      <img src="star-solid.svg" width="40px" height="40px">
+          <img src="star-solid.svg" width="40px" height="40px">
     </section>
     <hr>
     <section class="main" id="ledge">
         <h3 data-text="TheLedge">The Ledge</h3>
         <p>A rock climbing adventure between two friends turns into a terrifying nightmare. After Kelly captures the murder of her best friend on camera, she becomes the next target of a tight-knit group of friends who will stop at nothing to destroy the
             evidence and anyone in their way. Desperate for her safety, she begins a treacherous climb up a mountain cliff and her survival instincts are put to the test when she becomes trapped with the killers just 20 feet away. </p>
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
+              <img src="star-solid.svg" width="40px" height="40px">
+         <img src="star-solid.svg" width="40px" height="40px">
+      <img src="star-solid.svg" width="40px" height="40px">
     </section>
     <hr>
     <section class="main" id="shark">
         <h3 data-text="47MetersDownCaged">47Meters Down Caged</h3>
         <p>Two sisters are exploring the deep blue sea until something goes wrong. As they submerge 47m they encounter a creature that only wants flesh and blood. As they fight their way back to the top, they shortly run out of oxygen. With only an hour
             left they're not only racing against time they are racing against life and death.</p>
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
+          <img src="star-solid.svg" width="40px" height="40px">
+         <img src="star-solid.svg" width="40px" height="40px">
+            <img src="star-solid.svg" width="40px" height="40px">
+           <img src="star-solid.svg" width="40px" height="40px">
     </section>
     <hr>
     <section class="main" id="titanic">
@@ -69,12 +69,12 @@
         <p>84 years later, a 100 year-old woman named Rose DeWitt Bukater tells the story to her granddaughter Lizzy Calvert, Brock Lovett, Lewis Bodine, Bobby Buell and Anatoly Mikailavich on the Keldysh about her life set in April 10th 1912, on a ship
             called Titanic when young Rose boards the departing ship with the upper-class passengers and her mother, Ruth DeWitt Bukater, and her fiancé, Caledon Hockley. Meanwhile, a drifter and artist named Jack Dawson and his best friend Fabrizio De
             Rossi win third-class tickets to the ship in a game. And she explains the whole story from departure until the death of Titanic on its first and last voyage April 15th, 1912 at 2:20 in the morning.</p>
-        <!-- <img src="./f.png" width="200px" height="100px"> -->
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
-        <img src="file:///C:/Users/Hello/Downloads/star-solid.svg" width="40px" height="40px">
+      <img src="star-solid.svg" width="40px" height="40px">
+           <img src="star-solid.svg" width="40px" height="40px">
+      <img src="star-solid.svg" width="40px" height="40px">
+            <img src="star-solid.svg" width="40px" height="40px">
+      <img src="star-solid.svg" width="40px" height="40px">
+             <img src="star-solid.svg" width="40px" height="40px">
     </section>
 
     <footer class="footer">
