--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h2 id="logo"><img src="D:\hazem website\hazem.jpg" width="50px" height="50px"> the film</h2>
+        <h2 id="logo"><hazem.jpg" width="50px" height="50px"> the film</h2>
         <nav>
             <a href="#avatar">avatar</a>
             <a href="#fall">the fall</a>
